# node-tesseract-native

./: .gitignore  CMakeLists.txt  README.md  TesseractNative.sln
TesseractNative/: Api.cpp  Api.h  Result.h  Task.h  TesseractNative.vcxproj  TesseractNative.vcxproj.filters  TesseractOptions.h  Worker.cpp  Worker.h  WorkerPool.cpp  WorkerPool.h  tesseract.h
TesseractNativeTests/: TesseractNativeTests.vcxproj  stdafx.cpp
Tests/: ApiTests.cpp  Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
src/: Api.cpp  Api.h  CMakeLists.txt  Result.h  leptonica.in
src/cmake/: External_leptonica.cmake  External_tesseract.cmake
src/include/: Api.h  Result.h  TesseractOptions.h
src/src/: Api.cpp  Result.cpp
test/: ApiTests.cpp  ApiTestsFixture.h  CMakeLists.txt  CMakeLists.txt.in  Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
test/resources/: test.tif
test/tests/: ApiTests.cpp  ApiTests.h
